syntax = "proto3";

package provider;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/kiaedev/kiae/api/provider";

message Token {
    string id = 1; // @gotags: bson:"_id,omitempty"
    string userid = 2;
    string provider = 3;
    string access_token = 5; // @gotags: bson:"access_token,omitempty"
    string refresh_token = 6; // @gotags: bson:"refresh_token,omitempty"
    google.protobuf.Timestamp expires_at = 7; // @gotags: bson:"expires_at,omitempty"

    google.protobuf.Timestamp created_at = 101; // @gotags: bson:"created_at,omitempty"
    google.protobuf.Timestamp updated_at = 103; // @gotags: bson:"updated_at,omitempty"
}
